--- a/src/app/components/pixel-war-table/pixel-war-table.component.html
+++ b/src/app/components/pixel-war-table/pixel-war-table.component.html
@@ -1,13 +1,22 @@
-<!-- pixel-war-table.component.html -->
 <canvas
   #canvasPixel
   style="border: 1px solid"
   width="1000"
   height="700"
   (click)="canvasClicked($event)"
-></canvas>
+  (mousemove)="onCellHover($event)"
+>
+</canvas>
+
+<div class="mouse-coordinates">
+  Position: X {{ mouseOnCell.x }}, Y {{ mouseOnCell.y }}
+</div>
 
 <div class="popup" *ngIf="showPopup">
+  <div class="close-icon" (click)="closePopup()" style="cursor: pointer">
+    &times;
+  </div>
+  <!-- Icône pour fermer la popup -->
   <form (submit)="submitForm()">
     <label for="color">Couleur (RGB) :</label>
     <input type="color" id="color" (input)="updateColor($event)" required />
